# notification-api

./: .env.example  .gitignore  .pre-commit-config.yaml  .talismanrc  Dockerfile  ENDPOINT_CLEANUP_SUMMARY.md  Makefile  POSTMAN_COLLECTIONS_SUMMARY.md  README.md  application.py  docker-compose.yml  env.sh  gunicorn_config.py  inbound-message-vetext.md  prometheus.yml  pyproject.toml  pytest.ini  requirements-app.txt  requirements-app.txt.bak  requirements.txt  requirements_for_test.txt  requirements_for_user_flows.txt  ruff.toml  task_definitions.csv  testfile  testfile2
.github/: pull_request_template.md  release.yaml
.github/ISSUE_TEMPLATE/: annual-au02-event-logging-review-template.md  bug-report-template.md  hotfix-template.md  lambda-dependency-update-template.md  spike-template.md  story-template.md
.github/scripts/: actionUtils.js  calculate-version-bump.js  create-tag.js  createAndPostTag.js  createAndPushTag.js  createReleaseNotes.js  createTag.js  postQA.js  pr-label-versioning.js  prData.js  prLabelSemver.js  preTagSummary.js  publishReleaseNotes.js  trigger-regression.js  versionUtils.js
.github/workflows/: build-manual.yaml  build.yml  build_deploy.yaml  cd-pipeline.yml  codeql-analysis.yml  codeql.yml  create-and-post-tag.yml  create-release-notes.yml  daily-email-ci.yaml  db-downgrade.yml  dependency-ticket-creation.yml  deploy-release.yml  deploy-to-perf.yml  deploy-to-staging.yml  deploy_lambda_dev.yml  deployment-trigger.yaml  deployment-tw.yaml  deployment.yaml  deployment.yml  dev-ci.yaml  dev-tests.yml  dev_deploy.yml  enhanced-image-scan.yml  event-logging-review-ticket-creation.yml  export_secrets.yml  lambda-functions.yaml  lambda-functions.yml  load-test-email-delivery-time.yaml  load-test-sms-response-time.yaml  perf-build-deploy.yaml  perf-deploy-trigger.yaml  pr-label-semver.yml  pre-release_trigger.yml  pre-tag-summary.yml  prerelease_trigger.yml  production-trigger.yaml  regression-public.yml  release_trigger.yml  run-regression.yml  semver-tag.yml  (+13 more)
app/: README.md  __init__.py  commands.py  config.py  constants.py  cronitor.py  db.py  errors.py  feature_flags.py  history_meta.py  models.py  pii.py  schemas.py  utils.py
app/accept_invite/: rest.py
app/attachments/: exceptions.py  mimetype.py  (+1 more)
ci/: .docker-env.example  .local.env  Dockerfile  Dockerfile.datadog  Dockerfile.db  Dockerfile.local  Dockerfile.test  Dockerfile.userflow  README.md  docker-compose-ci.yml  docker-compose-local-migrate.yml  docker-compose-local-readwrite.yml  docker-compose-local.yml  docker-compose-test.yml  docker-compose.yml
comp_pen_call_center/: Dockerfile  README.md  compose.yml  export.ndjson  main.py  requirements.txt
custom_checks/: cert_expiration_check.py  cert_expiration_check.yaml  custom_cert_expiration_check.py  custom_cert_expiration_check.yaml
documents/: github-oauth2-sequence-diagram.puml  manual-testing-custom-callback-headers.md
lambda_functions/: inbound_sms_populate.py  readme.md
load_testing/: locustfile.py  requirements.txt  requirements_cli.txt  send_email_load_test.py  send_sms_cli.py  send_sms_load_test.py
migrations/: env.py
scripts/: check_celery.sh  fix_migrations.py  import-va-certs.sh  run_app.sh  run_celery.sh  run_celery_beat.sh  run_ci_migrations.sh  run_tests.sh  save_certificate.sh  tag_git_dev.sh  tag_git_staging.sh  trigger_task.py
sql/: va_profile_opt_in_out.sql
tests/: README.md  __init__.py  conftest.py  env_vars
(+609 files in other folders)
