[tool.poetry]
name = "notification-api"
description = "VA Enterprise Notification Platform"
authors = [
    "VA Notify <vanotify@va.gov>",
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.10"
alembic-utils = "*"
# TODO - was *@1.3.2.  Upgrades to 1.4.0 breaks?  The newer version is undocumented.
Authlib = "~1.3.2"
boto3 = "*"
botocore = "*"
cachelib = "*"
cachetools = "*"
celery = {extras = ["sqs"], version = "*"}
click-datetime = "*"
# This is not a top-level dependency.  v44 is compiled against OpenSSL 3.4.0, but the version
# of Alpine we use as of 24 DEC 2024 includes OpenSSL v3.1.7-r1.
# https://cryptography.io/en/latest/changelog/#v44-0-0
# https://pkgs.alpinelinux.org/package/v3.19/main/x86_64/openssl
cryptography = "~43"
# TODO - was *@2.18.1.  Upgrade breaks?
ddtrace = "~2.16.2"
docopt = "*"
fido2 = "*"
Flask = "*"
Flask-Bcrypt = "*"
Flask-JWT-Extended = "*"
flask-marshmallow = "*"
Flask-Migrate = "*"
Flask-SQLAlchemy = "*"
gunicorn = "*"
iso8601 = "*"
itsdangerous = "*"
jsonschema = "*"
kombu = "*"
marshmallow = "*"
marshmallow-sqlalchemy = "*"
nanoid = "*"
notifications-python-client = "*"
phonenumbers = "*"
psycopg2-binary = "*"
pwnedpasswords = "*"
PyJWT = "~2.9.0"
pypdf = "*"
python-dotenv = "*"
python-magic = "*"
rfc3339-validator = "*"
sentry-sdk = {extras = ["flask"], version = "*"}
SQLAlchemy = "^1.4"
twilio = "*"
Unidecode = "*"
validatesns = "*"
Werkzeug = "*"
notification-utils = {git = "https://github.com/department-of-veterans-affairs/notification-utils.git"}

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
freezegun = "*"
google-cloud-bigquery = "*"
moto = "*"
pytest = "*"
pytest-cov = "*"
pytest-env = "*"
pytest-mock = "*"
pytest-xdist ="*"
requests-mock = "*"
rfc3987 = "*"
strict-rfc3339 = "*"

[tool.poetry.group.static_tools]
optional = true
[tool.poetry.group.static_tools.dependencies]
ruff = "*"
pre-commit = "*"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "migrations",
]

line-length = 120
indent-width = 4
target-version = "py310"


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W", "C901"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
docstring-code-format = true  # https://docs.astral.sh/ruff/settings/#format-docstring-code-format
# docstring-code-line-length = "dynamic"  # https://docs.astral.sh/ruff/settings/#format-docstring-code-line-length
indent-style = "space"
line-ending = "auto"
quote-style = "single"
skip-magic-trailing-comma = false

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # https://bandit.readthedocs.io/en/latest/plugins/b101_assert_used.html

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

